--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="small">Poin: <strong id="points" style="font-size:16px;">0</strong></div>
             <div class="small">Progress: <strong id="completedCount">0</strong>/<span id="topicCount">0</span></div>
           </div>
-          <a href="https://github.com/PRABUREVOLUSI/BARBAR/discussions" target="_blank" class="btn forum-btn">
+          <a href="https://udinndinn49-debug.github.io/contoh/ " target="_blank" class="btn forum-btn">
             💬 Forum Diskusi
           </a>
         </div>
