--- a/index.html
+++ b/index.html
@@ -49,15 +49,12 @@
             <div class="small">Microlearning — 5 menit per topik · Video ≤ 3 menit · Quiz adaptif · AI Mentor</div>
           </div>
         </div>
-        <!-- PERUBAHAN: Wrapper baru untuk statistik dan tombol forum -->
         <div class="header-actions">
           <div class="stats-group">
             <div class="small">Poin: <strong id="points" style="font-size:16px;">0</strong></div>
             <div class="small">Progress: <strong id="completedCount">0</strong>/<span id="topicCount">0</span></div>
           </div>
-          <a href="https://udinndinn49-debug.github.io/contoh/ " target="_blank" class="btn forum-btn">
-            💬 Forum Diskusi
-          </a>
+          <!-- PERUBAHAN: Tombol forum diskusi dihapus dari header -->
         </div>
       </header>
 
@@ -128,7 +125,7 @@
         <div class="card">
           <div style="font-weight:700">🏆 Papan Peringkat</div>
           <div id="leaderboard" style="margin-top: 12px; display: flex; flex-direction: column; gap: 8px;">
-            <div class="small">Memuat data...</div>
+            <!-- Konten Papan Peringkat akan di-render oleh JavaScript -->
           </div>
         </div>
 
@@ -146,6 +143,13 @@
           </div>
         </div>
       </aside>
+      
+      <!-- PERUBAHAN: Wrapper baru untuk tombol forum diskusi -->
+      <div class="forum-cta-wrapper">
+        <a href="https://github.com/PRABUREVOLUSI/BARBAR/discussions" target="_blank" class="btn accent-btn forum-btn">
+          💬 Buka Forum Diskusi Komunitas
+        </a>
+      </div>
 
       <footer>
         Made with Mind  <code>/videos</code>. Oleh Zulfa Fahmiy and Prabu Revolusi.
