--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </aside>
       
       <div class="forum-cta-wrapper">
-        <a href="https://github.com/PRABUREVOLUSI/BARBAR/discussions" target="_blank" class="btn accent-btn forum-btn">
+        <a href="https://udinndinn49-debug.github.io/contoh/ " target="_blank" class="btn accent-btn forum-btn">
           💬 Buka Forum Diskusi Komunitas
         </a>
       </div>
