--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id="splashScreen" class="screen active">
     <div class="splash-content">
-      <svg class="splash-logo" width="80" height="80" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="splash-logo" width="80" height="80" viewBox="0 0 100 100" fill="none" xmlns="https://res.cloudinary.com/dgzufaone/image/upload/v1760881887/1000050042-removebg-preview_t6kzbn.svg">
           <path d="M20 80V20L60 20C76.5685 20 90 33.4315 90 50C90 66.5685 76.5685 80 60 80H20Z" fill="white" fill-opacity="0.3"/>
           <path d="M20 70V30H55C66.0457 30 75 38.9543 75 50C75 61.0457 66.0457 70 55 70H20Z" fill="white"/>
       </svg>
