--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
 
       <footer>
-        Made with Mind  <code>/videos</code>. Oleh Zulfa Fahmiy and Prabu Revolusi.
+        Made with Artificial Intelligence  <code>/videos</code>. By Zulfa Fahmiy and Prabu Revolusi.
       </footer>
     </div>
   </div>
