--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
           </div>
         </aside>
       </div>
+    </div>
+    
     <!-- 5. Halaman AI Mentor Terpisah (FITUR GEMINI #3) -->
     <div id="aiMentorPage" class="page">
         <h2>AI Mentor</h2>
